--- a/Data-Structures/linked_list/package.json
+++ b/Data-Structures/linked_list/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "linked-list.js",
   "scripts": {
-    "test": "jest --verbose --coverage"
+    "test": "jest --verbose --coverage",
+    "lint": "eslint '**/*.js'"
   },
   "keywords": [],
   "author": "",
@@ -267,6 +268,7 @@
     "extsprintf": "^1.3.0"
   },
   "devDependencies": {
+    "eslint": "^7.1.0",
     "jest": "^26.0.1"
   },
   "description": ""
