--- a/Data-Structures/linked_list/package.json
+++ b/Data-Structures/linked_list/package.json
@@ -1,275 +1,275 @@
 {
   "name": "linked_list",
   "version": "1.0.0",
+  "description": "Pull Request: https://github.com/401-advanced-javascript-tommalieh/data-structures-and-algorithms/pull/8",
   "main": "linked-list.js",
+  "dependencies": {
+    "acorn": "^7.2.0",
+    "abab": "^2.0.3",
+    "acorn-walk": "^7.1.1",
+    "ansi-regex": "^5.0.0",
+    "ansi-escapes": "^4.3.1",
+    "arr-flatten": "^1.1.0",
+    "ansi-styles": "^4.2.1",
+    "arr-union": "^3.1.0",
+    "asn1": "^0.2.4",
+    "array-unique": "^0.3.2",
+    "assert-plus": "^1.0.0",
+    "arr-diff": "^4.0.0",
+    "asynckit": "^0.4.0",
+    "assign-symbols": "^1.0.0",
+    "atob": "^2.1.2",
+    "aws4": "^1.10.0",
+    "argparse": "^1.0.10",
+    "babel-preset-current-node-syntax": "^0.1.2",
+    "aws-sign2": "^0.7.0",
+    "brace-expansion": "^1.1.11",
+    "bser": "^2.1.1",
+    "callsites": "^3.1.0",
+    "browser-process-hrtime": "^1.0.0",
+    "balanced-match": "^1.0.0",
+    "capture-exit": "^2.0.0",
+    "buffer-from": "^1.1.1",
+    "caseless": "^0.12.0",
+    "ci-info": "^2.0.0",
+    "chalk": "^4.0.0",
+    "class-utils": "^0.3.6",
+    "char-regex": "^1.0.2",
+    "co": "^4.6.0",
+    "collect-v8-coverage": "^1.0.1",
+    "color-name": "^1.1.4",
+    "color-convert": "^2.0.1",
+    "collection-visit": "^1.0.0",
+    "copy-descriptor": "^0.1.1",
+    "component-emitter": "^1.3.0",
+    "camelcase": "^5.3.1",
+    "combined-stream": "^1.0.8",
+    "core-util-is": "^1.0.2",
+    "cross-spawn": "^6.0.5",
+    "debug": "^4.1.1",
+    "concat-map": "^0.0.1",
+    "acorn-globals": "^6.0.0",
+    "convert-source-map": "^1.7.0",
+    "dashdash": "^1.14.1",
+    "decamelize": "^1.2.0",
+    "deepmerge": "^4.2.2",
+    "anymatch": "^3.1.1",
+    "cssom": "^0.4.4",
+    "delayed-stream": "^1.0.0",
+    "decode-uri-component": "^0.2.0",
+    "cssstyle": "^2.3.0",
+    "deep-is": "^0.1.3",
+    "define-property": "^2.0.2",
+    "diff-sequences": "^26.0.0",
+    "ecc-jsbn": "^0.1.2",
+    "emoji-regex": "^8.0.0",
+    "error-ex": "^1.3.2",
+    "domexception": "^2.0.1",
+    "decimal.js": "^10.2.0",
+    "escape-string-regexp": "^1.0.5",
+    "estraverse": "^4.3.0",
+    "exec-sh": "^0.3.4",
+    "esprima": "^4.0.1",
+    "exit": "^0.1.2",
+    "esutils": "^2.0.3",
+    "extend": "^3.0.2",
+    "extsprintf": "^1.3.0",
+    "extend-shallow": "^3.0.2",
+    "fast-json-stable-stringify": "^2.1.0",
+    "fast-deep-equal": "^3.1.1",
+    "fast-levenshtein": "^2.0.6",
+    "fb-watchman": "^2.0.1",
+    "find-up": "^4.1.0",
+    "forever-agent": "^0.6.1",
+    "for-in": "^1.0.2",
+    "fragment-cache": "^0.2.1",
+    "form-data": "^2.3.3",
+    "get-caller-file": "^2.0.5",
+    "fs.realpath": "^1.0.0",
+    "getpass": "^0.1.7",
+    "get-package-type": "^0.1.0",
+    "gensync": "^1.0.0-beta.1",
+    "get-value": "^2.0.6",
+    "growly": "^1.3.0",
+    "graceful-fs": "^4.2.4",
+    "has-flag": "^4.0.0",
+    "globals": "^11.12.0",
+    "har-schema": "^2.0.0",
+    "hosted-git-info": "^2.8.8",
+    "has-value": "^1.0.0",
+    "html-escaper": "^2.0.2",
+    "has-values": "^1.0.0",
+    "iconv-lite": "^0.4.24",
+    "imurmurhash": "^0.1.4",
+    "human-signals": "^1.1.1",
+    "import-local": "^3.0.2",
+    "inherits": "^2.0.4",
+    "is-arrayish": "^0.2.1",
+    "is-accessor-descriptor": "^0.1.6",
+    "ip-regex": "^2.1.0",
+    "is-buffer": "^1.1.6",
+    "is-data-descriptor": "^0.1.4",
+    "is-extendable": "^0.1.1",
+    "is-ci": "^2.0.0",
+    "is-docker": "^2.0.0",
+    "is-descriptor": "^0.1.6",
+    "is-generator-fn": "^2.1.0",
+    "is-fullwidth-code-point": "^3.0.0",
+    "is-number": "^7.0.0",
+    "is-plain-object": "^2.0.4",
+    "is-stream": "^1.1.0",
+    "is-windows": "^1.0.2",
+    "is-typedarray": "^1.0.0",
+    "is-potential-custom-element-name": "^1.0.0",
+    "is-wsl": "^2.2.0",
+    "isarray": "^1.0.0",
+    "isexe": "^2.0.0",
+    "isstream": "^0.1.2",
+    "isobject": "^3.0.1",
+    "istanbul-lib-coverage": "^3.0.0",
+    "istanbul-lib-source-maps": "^4.0.0",
+    "istanbul-lib-report": "^3.0.0",
+    "istanbul-reports": "^3.0.2",
+    "jest-diff": "^26.0.1",
+    "jest-each": "^26.0.1",
+    "jest-docblock": "^26.0.0",
+    "jest-get-type": "^26.0.0",
+    "jest-leak-detector": "^26.0.1",
+    "jest-mock": "^26.0.1",
+    "jest-matcher-utils": "^26.0.1",
+    "jest-pnp-resolver": "^1.2.1",
+    "jest-regex-util": "^26.0.0",
+    "jest-serializer": "^26.0.0",
+    "jest-util": "^26.0.1",
+    "jest-worker": "^26.0.0",
+    "jest-validate": "^26.0.1",
+    "js-tokens": "^4.0.0",
+    "jsbn": "^0.1.1",
+    "js-yaml": "^3.14.0",
+    "json-parse-better-errors": "^1.0.2",
+    "json-schema-traverse": "^0.4.1",
+    "json-schema": "^0.2.3",
+    "json5": "^2.1.3",
+    "kleur": "^3.0.3",
+    "kind-of": "^6.0.3",
+    "leven": "^3.1.0",
+    "json-stringify-safe": "^5.0.1",
+    "locate-path": "^5.0.0",
+    "lodash.sortby": "^4.7.0",
+    "lines-and-columns": "^1.1.6",
+    "lodash": "^4.17.15",
+    "make-dir": "^3.1.0",
+    "map-cache": "^0.2.2",
+    "merge-stream": "^2.0.0",
+    "makeerror": "^1.0.11",
+    "map-visit": "^1.0.0",
+    "mime-types": "^2.1.27",
+    "mime-db": "^1.44.0",
+    "mimic-fn": "^2.1.0",
+    "minimatch": "^3.0.4",
+    "minimist": "^1.2.5",
+    "mixin-deep": "^1.3.2",
+    "ms": "^2.1.2",
+    "natural-compare": "^1.4.0",
+    "node-int64": "^0.4.0",
+    "node-modules-regexp": "^1.0.0",
+    "nice-try": "^1.0.5",
+    "oauth-sign": "^0.9.0",
+    "object-copy": "^0.1.0",
+    "nwsapi": "^2.2.0",
+    "object-visit": "^1.0.1",
+    "onetime": "^5.1.0",
+    "npm-run-path": "^2.0.2",
+    "object.pick": "^1.3.0",
+    "p-each-series": "^2.1.0",
+    "p-locate": "^4.1.0",
+    "p-finally": "^1.0.0",
+    "normalize-path": "^3.0.0",
+    "p-try": "^2.2.0",
+    "parse-json": "^5.0.0",
+    "parse5": "^5.1.1",
+    "p-limit": "^2.3.0",
+    "pascalcase": "^0.1.1",
+    "path-exists": "^4.0.0",
+    "path-key": "^2.0.1",
+    "path-is-absolute": "^1.0.1",
+    "path-parse": "^1.0.6",
+    "picomatch": "^2.2.2",
+    "performance-now": "^2.1.0",
+    "pkg-dir": "^4.2.0",
+    "posix-character-classes": "^0.1.1",
+    "pirates": "^4.0.1",
+    "pretty-format": "^26.0.1",
+    "psl": "^1.8.0",
+    "prelude-ls": "^1.1.2",
+    "prompts": "^2.3.2",
+    "punycode": "^2.1.1",
+    "qs": "^6.5.2",
+    "regex-not": "^1.0.2",
+    "react-is": "^16.13.1",
+    "repeat-string": "^1.6.1",
+    "repeat-element": "^1.1.3",
+    "request-promise-core": "^1.1.3",
+    "remove-trailing-separator": "^1.1.0",
+    "require-main-filename": "^2.0.0",
+    "require-directory": "^2.1.1",
+    "request-promise-native": "^1.0.8",
+    "resolve": "^1.17.0",
+    "resolve-cwd": "^3.0.0",
+    "resolve-url": "^0.2.1",
+    "resolve-from": "^5.0.0",
+    "rsvp": "^4.8.5",
+    "ret": "^0.1.15",
+    "safe-regex": "^1.1.0",
+    "safer-buffer": "^2.1.2",
+    "safe-buffer": "^5.1.2",
+    "semver": "^6.3.0",
+    "set-blocking": "^2.0.0",
+    "set-value": "^2.0.1",
+    "shebang-regex": "^1.0.0",
+    "signal-exit": "^3.0.3",
+    "shellwords": "^0.1.1",
+    "shebang-command": "^1.2.0",
+    "sisteransi": "^1.0.5",
+    "slash": "^3.0.0",
+    "snapdragon-node": "^2.1.1",
+    "snapdragon-util": "^3.0.1",
+    "source-map": "^0.6.1",
+    "spdx-exceptions": "^2.3.0",
+    "source-map-url": "^0.4.0",
+    "source-map-support": "^0.5.19",
+    "spdx-correct": "^3.1.1",
+    "spdx-expression-parse": "^3.0.1",
+    "spdx-license-ids": "^3.0.5",
+    "split-string": "^3.1.0",
+    "sprintf-js": "^1.0.3",
+    "stealthy-require": "^1.1.1",
+    "string-length": "^4.0.1",
+    "static-extend": "^0.1.2",
+    "string-width": "^4.2.0",
+    "stack-utils": "^2.0.2",
+    "strip-ansi": "^6.0.0",
+    "strip-final-newline": "^2.0.0",
+    "strip-bom": "^4.0.0",
+    "strip-eof": "^1.0.0",
+    "supports-hyperlinks": "^2.1.0",
+    "supports-color": "^7.1.0",
+    "terminal-link": "^2.1.1",
+    "symbol-tree": "^3.2.4",
+    "throat": "^5.0.0",
+    "to-fast-properties": "^2.0.0",
+    "tmpl": "^1.0.4",
+    "detect-newline": "^3.1.0"
+  },
+  "devDependencies": {
+    "eslint": "^7.1.0",
+    "jest": "^26.0.1"
+  },
   "scripts": {
     "test": "jest --verbose --coverage",
     "lint": "eslint '**/*.js'"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "abab": "^2.0.3",
-    "ansi-escapes": "^4.3.1",
-    "ansi-styles": "^4.2.1",
-    "anymatch": "^3.1.1",
-    "ansi-regex": "^5.0.0",
-    "arr-flatten": "^1.1.0",
-    "argparse": "^1.0.10",
-    "arr-diff": "^4.0.0",
-    "array-unique": "^0.3.2",
-    "arr-union": "^3.1.0",
-    "assign-symbols": "^1.0.0",
-    "asn1": "^0.2.4",
-    "asynckit": "^0.4.0",
-    "atob": "^2.1.2",
-    "aws-sign2": "^0.7.0",
-    "aws4": "^1.10.0",
-    "balanced-match": "^1.0.0",
-    "brace-expansion": "^1.1.11",
-    "babel-preset-current-node-syntax": "^0.1.2",
-    "acorn-walk": "^7.1.1",
-    "acorn-globals": "^6.0.0",
-    "browser-process-hrtime": "^1.0.0",
-    "buffer-from": "^1.1.1",
-    "capture-exit": "^2.0.0",
-    "camelcase": "^5.3.1",
-    "callsites": "^3.1.0",
-    "caseless": "^0.12.0",
-    "chalk": "^4.0.0",
-    "assert-plus": "^1.0.0",
-    "bser": "^2.1.1",
-    "acorn": "^7.2.0",
-    "class-utils": "^0.3.6",
-    "co": "^4.6.0",
-    "ci-info": "^2.0.0",
-    "color-convert": "^2.0.1",
-    "combined-stream": "^1.0.8",
-    "component-emitter": "^1.3.0",
-    "color-name": "^1.1.4",
-    "collection-visit": "^1.0.0",
-    "concat-map": "^0.0.1",
-    "convert-source-map": "^1.7.0",
-    "copy-descriptor": "^0.1.1",
-    "cross-spawn": "^6.0.5",
-    "dashdash": "^1.14.1",
-    "cssom": "^0.4.4",
-    "cssstyle": "^2.3.0",
-    "debug": "^4.1.1",
-    "char-regex": "^1.0.2",
-    "decode-uri-component": "^0.2.0",
-    "deepmerge": "^4.2.2",
-    "decimal.js": "^10.2.0",
-    "define-property": "^2.0.2",
-    "deep-is": "^0.1.3",
-    "detect-newline": "^3.1.0",
-    "diff-sequences": "^26.0.0",
-    "delayed-stream": "^1.0.0",
-    "escape-string-regexp": "^1.0.5",
-    "emoji-regex": "^8.0.0",
-    "estraverse": "^4.3.0",
-    "ecc-jsbn": "^0.1.2",
-    "error-ex": "^1.3.2",
-    "esutils": "^2.0.3",
-    "esprima": "^4.0.1",
-    "extend": "^3.0.2",
-    "domexception": "^2.0.1",
-    "extend-shallow": "^3.0.2",
-    "exit": "^0.1.2",
-    "fast-deep-equal": "^3.1.1",
-    "fb-watchman": "^2.0.1",
-    "fast-json-stable-stringify": "^2.1.0",
-    "find-up": "^4.1.0",
-    "exec-sh": "^0.3.4",
-    "fast-levenshtein": "^2.0.6",
-    "decamelize": "^1.2.0",
-    "for-in": "^1.0.2",
-    "collect-v8-coverage": "^1.0.1",
-    "form-data": "^2.3.3",
-    "fragment-cache": "^0.2.1",
-    "fs.realpath": "^1.0.0",
-    "get-caller-file": "^2.0.5",
-    "gensync": "^1.0.0-beta.1",
-    "get-package-type": "^0.1.0",
-    "getpass": "^0.1.7",
-    "graceful-fs": "^4.2.4",
-    "get-value": "^2.0.6",
-    "growly": "^1.3.0",
-    "har-schema": "^2.0.0",
-    "globals": "^11.12.0",
-    "has-flag": "^4.0.0",
-    "has-values": "^1.0.0",
-    "has-value": "^1.0.0",
-    "html-escaper": "^2.0.2",
-    "hosted-git-info": "^2.8.8",
-    "human-signals": "^1.1.1",
-    "import-local": "^3.0.2",
-    "imurmurhash": "^0.1.4",
-    "inherits": "^2.0.4",
-    "iconv-lite": "^0.4.24",
-    "is-accessor-descriptor": "^0.1.6",
-    "is-buffer": "^1.1.6",
-    "is-arrayish": "^0.2.1",
-    "is-ci": "^2.0.0",
-    "is-data-descriptor": "^0.1.4",
-    "is-descriptor": "^0.1.6",
-    "ip-regex": "^2.1.0",
-    "is-fullwidth-code-point": "^3.0.0",
-    "is-docker": "^2.0.0",
-    "is-extendable": "^0.1.1",
-    "is-number": "^7.0.0",
-    "is-plain-object": "^2.0.4",
-    "is-stream": "^1.1.0",
-    "is-generator-fn": "^2.1.0",
-    "is-typedarray": "^1.0.0",
-    "is-potential-custom-element-name": "^1.0.0",
-    "is-windows": "^1.0.2",
-    "is-wsl": "^2.2.0",
-    "isarray": "^1.0.0",
-    "isexe": "^2.0.0",
-    "isstream": "^0.1.2",
-    "isobject": "^3.0.1",
-    "istanbul-lib-report": "^3.0.0",
-    "istanbul-reports": "^3.0.2",
-    "istanbul-lib-source-maps": "^4.0.0",
-    "istanbul-lib-coverage": "^3.0.0",
-    "jest-docblock": "^26.0.0",
-    "jest-diff": "^26.0.1",
-    "jest-get-type": "^26.0.0",
-    "jest-each": "^26.0.1",
-    "jest-leak-detector": "^26.0.1",
-    "jest-mock": "^26.0.1",
-    "jest-regex-util": "^26.0.0",
-    "jest-matcher-utils": "^26.0.1",
-    "jest-serializer": "^26.0.0",
-    "jest-pnp-resolver": "^1.2.1",
-    "jest-validate": "^26.0.1",
-    "jest-worker": "^26.0.0",
-    "jest-util": "^26.0.1",
-    "js-tokens": "^4.0.0",
-    "js-yaml": "^3.14.0",
-    "jsbn": "^0.1.1",
-    "json-schema": "^0.2.3",
-    "json-schema-traverse": "^0.4.1",
-    "json-stringify-safe": "^5.0.1",
-    "json5": "^2.1.3",
-    "kind-of": "^6.0.3",
-    "json-parse-better-errors": "^1.0.2",
-    "leven": "^3.1.0",
-    "kleur": "^3.0.3",
-    "locate-path": "^5.0.0",
-    "lodash": "^4.17.15",
-    "make-dir": "^3.1.0",
-    "lines-and-columns": "^1.1.6",
-    "lodash.sortby": "^4.7.0",
-    "makeerror": "^1.0.11",
-    "map-cache": "^0.2.2",
-    "merge-stream": "^2.0.0",
-    "map-visit": "^1.0.0",
-    "mime-types": "^2.1.27",
-    "mime-db": "^1.44.0",
-    "mimic-fn": "^2.1.0",
-    "minimist": "^1.2.5",
-    "forever-agent": "^0.6.1",
-    "minimatch": "^3.0.4",
-    "natural-compare": "^1.4.0",
-    "nice-try": "^1.0.5",
-    "mixin-deep": "^1.3.2",
-    "ms": "^2.1.2",
-    "normalize-path": "^3.0.0",
-    "node-int64": "^0.4.0",
-    "oauth-sign": "^0.9.0",
-    "nwsapi": "^2.2.0",
-    "object-copy": "^0.1.0",
-    "npm-run-path": "^2.0.2",
-    "onetime": "^5.1.0",
-    "p-each-series": "^2.1.0",
-    "object-visit": "^1.0.1",
-    "object.pick": "^1.3.0",
-    "p-finally": "^1.0.0",
-    "parse-json": "^5.0.0",
-    "p-locate": "^4.1.0",
-    "parse5": "^5.1.1",
-    "p-limit": "^2.3.0",
-    "p-try": "^2.2.0",
-    "pascalcase": "^0.1.1",
-    "path-exists": "^4.0.0",
-    "path-parse": "^1.0.6",
-    "path-is-absolute": "^1.0.1",
-    "path-key": "^2.0.1",
-    "picomatch": "^2.2.2",
-    "performance-now": "^2.1.0",
-    "posix-character-classes": "^0.1.1",
-    "prelude-ls": "^1.1.2",
-    "pirates": "^4.0.1",
-    "pkg-dir": "^4.2.0",
-    "pretty-format": "^26.0.1",
-    "psl": "^1.8.0",
-    "qs": "^6.5.2",
-    "punycode": "^2.1.1",
-    "react-is": "^16.13.1",
-    "prompts": "^2.3.2",
-    "regex-not": "^1.0.2",
-    "remove-trailing-separator": "^1.1.0",
-    "repeat-string": "^1.6.1",
-    "request-promise-core": "^1.1.3",
-    "repeat-element": "^1.1.3",
-    "request-promise-native": "^1.0.8",
-    "require-directory": "^2.1.1",
-    "resolve": "^1.17.0",
-    "require-main-filename": "^2.0.0",
-    "ret": "^0.1.15",
-    "resolve-from": "^5.0.0",
-    "resolve-cwd": "^3.0.0",
-    "rsvp": "^4.8.5",
-    "resolve-url": "^0.2.1",
-    "safe-buffer": "^5.1.2",
-    "set-blocking": "^2.0.0",
-    "safer-buffer": "^2.1.2",
-    "safe-regex": "^1.1.0",
-    "semver": "^6.3.0",
-    "set-value": "^2.0.1",
-    "shebang-command": "^1.2.0",
-    "shellwords": "^0.1.1",
-    "signal-exit": "^3.0.3",
-    "shebang-regex": "^1.0.0",
-    "sisteransi": "^1.0.5",
-    "slash": "^3.0.0",
-    "snapdragon-node": "^2.1.1",
-    "source-map-support": "^0.5.19",
-    "snapdragon-util": "^3.0.1",
-    "source-map": "^0.6.1",
-    "spdx-correct": "^3.1.1",
-    "spdx-exceptions": "^2.3.0",
-    "source-map-url": "^0.4.0",
-    "core-util-is": "^1.0.2",
-    "spdx-expression-parse": "^3.0.1",
-    "node-modules-regexp": "^1.0.0",
-    "sprintf-js": "^1.0.3",
-    "static-extend": "^0.1.2",
-    "stealthy-require": "^1.1.1",
-    "stack-utils": "^2.0.2",
-    "string-width": "^4.2.0",
-    "string-length": "^4.0.1",
-    "strip-ansi": "^6.0.0",
-    "strip-bom": "^4.0.0",
-    "strip-eof": "^1.0.0",
-    "strip-final-newline": "^2.0.0",
-    "supports-hyperlinks": "^2.1.0",
-    "supports-color": "^7.1.0",
-    "terminal-link": "^2.1.1",
-    "throat": "^5.0.0",
-    "tmpl": "^1.0.4",
-    "symbol-tree": "^3.2.4",
-    "to-fast-properties": "^2.0.0",
-    "split-string": "^3.1.0",
-    "spdx-license-ids": "^3.0.5",
-    "extsprintf": "^1.3.0"
-  },
-  "devDependencies": {
-    "eslint": "^7.1.0",
-    "jest": "^26.0.1"
-  },
-  "description": ""
+  "license": "ISC"
 }
